<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="strServiceFail">Bind Service fail</string>
    <string name="strWaitConnOn">Start waitting connection&#8230;</string>
    <string name="strWaitConnOff">Stop waitting connection</string>
    <string name="strServiceIdel">Idle</string>
    <string name="strConnecting">connecting&#8230;</string>
    <string name="strConnectingMsg">Device is connecting, please wait&#8230;</string>
    <string name="error_bluetooth_not_turnon">Not turn on bluetooth</string>
    <string name="app_service">Listen service</string>
    <string name="strDisconnect">Disconnect</string>
    <string name="strResetConn">Step1. Reset Connection</string>
    <string name="strSetConn">Step2. Set Connection</string>
    <string name="strMacAdd">Step3. MAC Address</string>
    <string name="strBTNoDeviceName">no device</string>
    <string name="strBeginConn">Begin to connect&#8230;</string>
    <string name="strConnected">Connected</string>
    <string name="strConnectErr">Connect error!</string>
	<string name="ime_name">CipherConnect Pro</string>
	<string name="ime_connection">Connect devices</string>
	<string name="strLastDevNameTitle">Last Connect:</string>	
	<string name="ime_setting_name">CipherConnect Pro settings</string>
	<string name="setting_buildconnect">Connect to %s</string>
	<string name="setting_waitconnect">Wait connection</string>
	<string name="setting_bluetooth_device_status">Bluetooth device status</string>
	<string name="setting_bluetooth_device_connected">Connected</string>
	<string name="setting_bluetooth_device_connecting">Connecting&#8230;</string>
	<string name="setting_bluetooth_device_disconnected">Disconnected</string>
	<string name="setting_bluetooth_device">Bluetooth device</string>
	<string name="setting_barcode_input">Inter-character delay</string>
	<string name="setting_language">Second language</string>
	<string name="setting_mode">Scan mode</string>
	<string name="setting_autoconnect">Auto connect</string>
	<string name="setting_about">About</string>
	<string name="about_company">Company</string>
	<string name="about_company_value">CipherLab Co., Ltd.</string>
	<string name="about_url">Website</string>
	<string name="about_url_value">http://www.cipherlab.com</string>
	<string name="about_version">Version</string>
	<string name="about_version_value">2.4.5</string>
	<string name="about_sdk">Android SDK</string>
	<string name="about_sdk_value">4.4.2</string>
	<string name="Initialize_starts">Initialize CipherConnect</string>
	<string name="can_not_find_any_bluetooth_device">Cannot find Bluetooth device!</string>
	<string name="can_not_find_device_by_name">No device selected</string>
	<string name="can_not_open_bluetooth_service">Please turn on Bluetooth!</string>
	<string name="the_bluetooth_device_beginConnecting">Begin connect Bluetooth device&#8230;</string>
	<string name="the_bluetooth_device_connecting">Bluetooth connecting</string>
	<string name="the_bluetooth_device_connected">Connected</string>
	<string name="the_bluetooth_device_disconnected">disconnected</string>
	<string name="the_bluetooth_device_connected_error">Bluetooth connection error</string>
	<string name="the_bluetooth_device_verify_fail">The device is not CipherLab product.</string>
	<!-- Title for Latin keyboard  -->
    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    
    <!-- license -->
    <string name="license_unlicensed_dialog_title">Application not licensed</string>
	<string name="license_unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
	<string name="license_buy_button">Buy app</string>
	<string name="license_quit_button">Exit</string>

    <!-- Have same application -->
    <string name="ime_service_name">com.cipherlab.cipherconnectpro.CipherConnectKeyboardService</string>
    <string name="ime_service_name_conflict">com.cipherlab.cipherconnect.CipherConnectKeyboardService</string>
    <string name="remove_lite_dialog_title">Attention</string>
	<string name="remove_lite_dialog_body">This input method may conflict with application CipherConnect Lite. Please remove CipherConnect Lite.</string>
	<string name="remove_lite_quit_button">Exit</string>
	<string name="setting_minimum">Minimize keyboard</string>
	<string name="Bluetooth_Mode_Title">Bluetooth mode select</string>
	<string name="Bluetooth_Mode_Summary">Select Bluetooth Mode(Classic) </string>
	<string name="Bluetooth_Mode_BLE_Summary">Select Bluetooth Mode(Low energy)</string>
	<string name="Bluetooth_Title">Bluetooth</string>
	<string name="Bluetooth_Mode_BLE_Title">Bluetooth mode select(LE)</string>
	<string name="Backlight_Suspend_Title">Stay awake</string>
	<string name="Exit_Title">Exit CiperConnect</string>
	<string name="Bluetooth_TurnOn">Turn on Bluetooth</string>
	<string name="Bluetooth_TurningOn">Turning on&#8230;</string>
	<string name="Bluetooth_TurningOff">Turning off&#8230;</string>
	<string name="Empty"> </string>
	<string name="about_help">Online Help</string>
	
	<!-- Barcode Interval -->
	<string-array name="SendBarcodeInterval_entries">
		<item>0.03 sec</item>
	    <item>0.04 sec</item>
		<item>0.05 sec</item>
		<item>0.06 sec</item>
		<item>0.07 sec</item>
		<item>0.08 sec</item>
		<item>0.09 sec</item>
		<item>0.10 sec</item>
		</string-array>
	<string-array name="SendBarcodeInterval_entries_value">
		<item>3</item>
	    <item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
	</string-array>
	
	<string name="ble_not_supported">BLE is not supported</string>
	<string name="ble_bind_service_fail">Inter initialize fail, please try again</string>
	<string name="LE_scan_title">BLE Device Scan</string>
	<string name="Classic_scan_title">Bluetooth Device Scan</string>
	<string name="Str_connect_to">Scan Devices and connect</string>
	<string name="Str_wait_connect">Wait devices to connect</string>
	<!--default Build conn values: slave;none|addrNone@false -->
	<string name="Str_BMPrefFormat">%1$s;%2$s|%3$s@%4$b</string>
	<string name="Str_defaultMode">slave</string>
	<string name="Str_defaultDevName">none</string>
	<string name="Str_defaultDevAddr">addrNone</string>
	<string name="Str_defaultAutoReConn">false</string>
	<string name="Str_BT_Classic">Classic</string>
	<string name="Str_BT_LE">Low Energy</string>
	<string name="str_search">Search</string>
	<string name="menu_scan">Scan</string>
	<string name="menu_stop">Stop</string>
	<string name="unknown_device">unknown device</string>
	<string name="none_device">none</string>
	<string-array name="ConnMode_entries">
		<item>@string/Str_connect_to</item>
	    <item>@string/Str_wait_connect</item>
	</string-array>
	<string-array name="ConnMode_entries_value">
		<item>@string/Str_connect_to</item>
	    <item>@string/Str_wait_connect</item>
	</string-array>
	
	<string-array name="ScanMode_entries">
		<item>@string/Str_BT_Classic</item>
	    <item>@string/Str_BT_LE</item>
	</string-array>
	<string-array name="ScanMode_entries_value">
		<item>@string/Str_BT_Classic</item>
	    <item>@string/Str_BT_LE</item>
	</string-array>
	<!-- Language -->
	<string-array name="Language_entries">
		<item>None</item>
		<item>Czech</item>
		<item>French</item>
		<item>German</item>
		<item>Italian</item>
		<item>Portuguese</item>
		<item>Russian</item>
		<item>Spanish</item>						
	</string-array>
	<string-array name="Language_entries_value">
		<item>No</item>
		<item>Cz</item>
		<item>Fr</item>
		<item>De</item>
		<item>It</item>
		<item>Pt</item>
		<item>Ru</item>
		<item>Es</item>		
	</string-array>
</resources>
