<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <Button
	        android:id="@+id/btnBuildConn"
	        android:layout_width="0dp"
	        android:layout_height="60dp"
	        android:layout_weight="80"
	        android:gravity="start|center_vertical"
	        android:text="@string/setting_buildconnect" />
	
	    <ToggleButton
	        android:id="@+id/btnConnMethod"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:background="@drawable/conn_method"
	        android:textOff=""
	        android:textOn="" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btnScanDevice"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/menu_scan" />

		<TextView
		    android:id="@+id/tvTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/strLastDevNameTitle"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/none_device"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

	</LinearLayout>

</LinearLayout>