<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalveModeActivity" >

	<ListView
	    android:id="@android:id/list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical" >

			<ImageView
	            android:id="@+id/imageResetConn"
	            android:layout_width="@dimen/BarcodeWidth"
	            android:layout_height="@dimen/BarcodeHeight"
	            android:layout_gravity="center_horizontal" />
	
	        <TextView
	            android:id="@+id/tvwReset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/strResetConn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical" >

	         <ImageView
	             android:id="@+id/imageSetConn"
	             android:layout_width="@dimen/BarcodeWidth"
	             android:layout_height="@dimen/BarcodeHeight"
	             android:layout_gravity="center_horizontal" />
	
	         <TextView
	             android:id="@+id/tvwSetConn"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center_horizontal"
	             android:text="@string/strSetConn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageMACAdd"
                android:layout_width="@dimen/BarcodeWidth"
                android:layout_height="@dimen/BarcodeHeight"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tvwAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/strMacAdd" />
        </LinearLayout>
        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="vertical" >

	        <ImageView
	            android:id="@+id/imageQRCodeConn"
	            android:layout_width="@dimen/QRcodeWidth"
	            android:layout_height="@dimen/QRcodeHeight"
	            android:layout_gravity="top|center_horizontal" />
	
	        <TextView
	            android:id="@+id/tvwQRConn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/strOneScanTile" />
		</LinearLayout>
         
        <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageBTConn"
                android:layout_width="@dimen/BTICWidth"
                android:layout_height="@dimen/BTICHeight"
                android:layout_above="@+id/tvwDeviceName"
                android:layout_centerHorizontal="true" />
            
	        <TextView
	        android:id="@+id/tvwDeviceName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/strBTNoDeviceName" />
		</RelativeLayout>
		
	
		    
    </LinearLayout>
</RelativeLayout>